--- a/css/grayscale.css
+++ b/css/grayscale.css
@@ -92,11 +92,12 @@
 }
 
 .masthead h1 {
-  font-family: 'Varela Round';
+  font-family: 'Nunito', sans-serif;
   font-size: 2.5rem;
   line-height: 2.5rem;
-  letter-spacing: 0.8rem;
-  background: -webkit-linear-gradient(rgba(255, 255, 255, 0.9), rgba(255, 255, 255, 0));
+  letter-spacing: 0;
+  font-weight: 700;
+  background: -webkit-linear-gradient(rgba(255, 255, 255, 1), rgba(255, 255, 255, 0.3));
   -webkit-text-fill-color: transparent;
   -webkit-background-clip: text;
 }
@@ -121,7 +122,7 @@
   .masthead h1 {
     font-size: 6.5rem;
     line-height: 6.5rem;
-    letter-spacing: 0.8rem;
+    letter-spacing: 0rem;
   }
   .masthead h2 {
     max-width: 30rem;
@@ -132,7 +133,7 @@
 .btn {
   box-shadow: 0 0.1875rem 0.1875rem 0 rgba(0, 0, 0, 0.1) !important;
   padding: 1.25rem 2rem;
-  font-family: 'Varela Round';
+  font-family: 'Nunito', sans-serif;
   font-size: 80%;
   text-transform: uppercase;
   letter-spacing: .15rem;
@@ -209,7 +210,7 @@
   box-shadow: 0 0.1875rem 0.1875rem 0 rgba(0, 0, 0, 0.1) !important;
   padding: 1.25rem 2rem;
   height: auto;
-  font-family: 'Varela Round';
+  font-family: 'Nunito', sans-serif;
   font-size: 80%;
   text-transform: uppercase;
   letter-spacing: 0.15rem;
@@ -220,14 +221,26 @@
   padding: 5rem 0 0;
 }
 
+.card {
+  background-color: transparent;
+  color: #ffffff;
+}
+
+.card a {
+  color: #ffffff;
+}
+
+.card .fas {
+  font-size: 3rem;
+}
+
 .contact-section .card {
   border: 0;
-  border-bottom: 0.25rem solid #64a19d;
 }
 
 .contact-section .card h4 {
-  font-size: 0.8rem;
-  font-family: 'Varela Round';
+  font-size: 1rem;
+  font-family: 'Nunito', sans-serif;
   text-transform: uppercase;
   letter-spacing: 0.15rem;
 }
