--- a/css/extra-styles.css
+++ b/css/extra-styles.css
@@ -6,3 +6,14 @@
     margin: 0 auto;
     max-width: 180px;
 }
+
+.btn-sm {
+    padding: .25rem .5rem;
+    font-size: .875rem;
+}
+.btn-outline-light {
+    border: #f8f9fa solid 1px;
+}
+.card {
+    border: 1px solid rgba(255,255,255,.25);
+}
